tests/js_error/source_locations/class/fields/init_call_with_constructor.exp
TypeError: BigInt cannot be converted to number
  ┌ source_locations/class/fields/init_call_with_constructor.js:3:13
  |
3 |   field = 1 + 2n;
  |             ^
Stack trace:
  at fieldsInitializer (source_locations/class/fields/init_call_with_constructor.js:3:13)
  at C (source_locations/class/fields/init_call_with_constructor.js:5:3)
  at <global> (source_locations/class/fields/init_call_with_constructor.js:8:1)